--- a/_includes/sections/image-quote-text.html
+++ b/_includes/sections/image-quote-text.html
@@ -2,57 +2,19 @@
     <div class="flex flex-col-reverse justify-evenly md:flex-row items-center gap-8 max-w-7xl mx-auto 
     {% if include.left %}md:flex-row{% else %}md:flex-row-reverse{% endif %}">
         <!-- Image -->
-        <div class="w-full md:w-1/2 flex justify-center relative">
+        <div class="w-full md:w-1/2 flex justify-center relative max-w-md">
             <img src="{{ include.image | relative_url }}" alt="{{ include.headline | escape }}"
                 class="max-h-128 object-contain w-full max-w-md">
             <!-- Tags -->
             {% if include.tags %}
-            <div class="absolute inset-0 pointer-events-none">
-                {% for tag in include.tags %}
-                {% assign tag_class = "" %}
-                {% if forloop.length == 2 %}
-                    {% if forloop.index == 1 %}
-                        {% assign tag_class = "right-4 top-4" %}
-                    {% elsif forloop.index == 2 %}
-                        {% assign tag_class = "left-4 bottom-1/2" %}
-                    {% endif %}
-                {% elsif forloop.length == 4 %}
-                    {% if forloop.index == 1 %}
-                        {% assign tag_class = "left-4 top-1/4" %}
-                    {% elsif forloop.index == 2 %}
-                        {% assign tag_class = "right-4 top-1/4 translate-y-5" %}
-                    {% elsif forloop.index == 3 %}
-                        {% assign tag_class = "left-4 bottom-1/4" %}
-                    {% elsif forloop.index == 4 %}
-                        {% assign tag_class = "right-4 bottom-1/4 translate-y-10" %}
-                    {% endif %}
-                {% endif %}
-                <div class="flex items-center text-sm md:text-xl w-fit absolute {{ tag_class }}"
-                data-scroll
-                data-scroll-speed="{{ forloop.index0 | minus: 0.4 | times: 0.05 }}">
-                    <span class="px-4 py-2 rounded-full border-12 border-white {{ tag.color }} 
-                    {% if forloop.index == 1 or forloop.index == 4 %}
-                        is-animated
-                    {% else %}
-                        is-animated-reverse
-                    {% endif %}">
-                    {% if tag.svg %}
-                        <span class="w-5 h-5 mr-2 inline-block align-middle {% if tag.svg_color %}{{ tag.svg_color }}{% endif %}">
-                            {{ site.data.svgs[tag.svg] }}
-                        </span>
-                    {% endif %}
-                    <span>{{ tag.text }}</span>
-                </span>
-                </div>
-                {% endfor %}
-            </div>
+              {% include elements/imagetags.html tags=include.tags layout=include.tags_layout bg=include.bg %}
             {% endif %}
         </div>
         <!-- Text Content -->
         <div class="w-full md:w-1/3 flex flex-col items-start {% if include.centered %}text-center md:text-left{% endif %}">
-            {% include elements/section-headline.html text=include.headline %}
-            {% include elements/section-subheadline.html text=include.subheadline %}
-            <div class="mb-4 is-animated text-lg md:text-base max-w-md">
+            {% include elements/section-headline.html text=include.headline centered=include.centered %}
+            {% include elements/section-subheadline.html text=include.subheadline centered=include.centered %}
+            <div class="mb-4 is-animated text-lg md:text-base max-w-md {% if include.centered %}mx-auto md:mx-0{% endif %}">
              {{ include.text | markdownify }}
             </div>
             {% if include.button_text and include.button_link %}
