--- a/_includes/sections/newsletter.html
+++ b/_includes/sections/newsletter.html
@@ -3,7 +3,7 @@
 
 {% assign section_data = site.data.textblocks.pages[page_key].sections[section] | default: site.data.textblocks.sections[section] %}
 
-<div class="px-8 md:px-4 py-10 mt-24 md:mt-0">
+<div class="px-8 md:px-4 py-10 md:mt-0">
     <div class="max-w-7xl mx-auto bg-green-50 rounded-3xl px-8 py-24 md:p-12 relative overflow-hidden is-animated">
         <svg class="absolute -bottom-24 md:bottom-0 left-0 md:left-12" width="150" height="188" viewBox="0 0 150 188" fill="none" xmlns="http://www.w3.org/2000/svg">
             <mask id="path-1-inside-1_2485_899" fill="white">
