--- a/_includes/sections/slider.html
+++ b/_includes/sections/slider.html
@@ -20,26 +20,28 @@ site.data.textblocks.sections[section] %}
     }
 </style>
 
-<div class="overflow-hidden w-full relative pt-10 md:pt-24">
-    <div class="marquee-track flex w-max gap-4">
-        {% for slide in site.data.textblocks.sections.slider.slides %}
-        <div class="flex flex-col items-center min-w-80">
-            <h3 class="text-3xl font-medium mb-4 text-center">{{ slide.headline }}</h3>
-            <img src="{{ slide.image | relative_url }}" alt="{{ slide.headline }}" class="w-full h-auto object-contain">
+<div class="flex flex-col-reverse md:flex-col pb-10 md:pb-24 pt-10 md:pt-24">
+    <div class="overflow-hidden w-full relative mt-10 md:mt-0">
+        <div class="marquee-track flex w-max gap-4">
+            {% for slide in site.data.textblocks.sections.slider.slides %}
+            <div class="flex flex-col-reverse md:flex-col items-center w-[80vw] md:w-fit md:min-w-80">
+                <h3 class="text-3xl font-medium mt-4 md:mt-0 mb-4 text-center">{{ slide.headline }}</h3>
+                <img src="{{ slide.image | relative_url }}" alt="{{ slide.headline }}" class="w-full h-auto object-contain">
+            </div>
+            {% endfor %}
+            {% for slide in site.data.textblocks.sections.slider.slides %}
+            <div class="flex flex-col-reverse md:flex-col items-center w-[80vw] md:w-fit md:min-w-80">
+                <h3 class="text-3xl font-medium mt-4 md:mt-0 mb-4 text-center">{{ slide.headline }}</h3>
+                <img src="{{ slide.image | relative_url }}" alt="{{ slide.headline }}" class="w-full h-auto object-contain">
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
-        {% for slide in site.data.textblocks.sections.slider.slides %}
-        <div class="flex flex-col items-center min-w-80">
-            <h3 class="text-3xl font-medium mb-4 text-center">{{ slide.headline }}</h3>
-            <img src="{{ slide.image | relative_url }}" alt="{{ slide.headline }}" class="w-full h-auto object-contain">
-        </div>
-        {% endfor %}
     </div>
-</div>
-<div class="px-8 md:px-4 pb-10 md:pb-24">
-    <div class="max-w-7xl mx-auto">
-        <div class="text-center mt-24">
-            <h2 class="text-4xl font-bold font-display mb-4 is-animated">{{ section_data.headline }}</h2>
+    <div class="px-8 md:px-4">
+        <div class="max-w-7xl mx-auto">
+            <div class="text-center md:mt-24">
+                <h2 class="text-4xl font-medium md:font-bold font-display mb-4 is-animated">{{ section_data.headline }}</h2>
+            </div>
         </div>
     </div>
 </div>
