--- a/_includes/layout/blog-header.html
+++ b/_includes/layout/blog-header.html
@@ -1,9 +1,9 @@
-<div class="px-8 md:px-4 pt-10 md:pt-32 pb-8">
-    <div class="max-w-4xl mx-auto">
+<div class="px-8 md:px-4 pt-24 md:pt-32 pb-8">
+    <div class="max-w-3xl mx-auto">
         <div class="mb-8 md:w-full md:h-[50vh] rounded-3xl relative bg-{{ page.color }}">
             <img src="{{ page.image | relative_url }}" alt="{{ page.title }}" class="w-full h-full object-contain" loading="lazy">
         </div>
-        <h1 class="text-7xl font-bold font-display reveal">
+        <h1 class="text-5xl md:text-7xl font-bold font-display reveal break-words">
             {{ page.headline }}
         </h1>
         <div class="flex items-center mt-8 reveal">
