--- a/_includes/sections/hero-text.html
+++ b/_includes/sections/hero-text.html
@@ -14,7 +14,7 @@
       </span>
     </div>
   {% endif %}
-    <h1 class="text-7xl font-bold font-display mb-4 opacity-0 animate-fadein-500 text-center lg:text-left w-full break-words">
+    <h1 class="text-5xl md:text-7xl font-bold font-display mb-4 opacity-0 animate-fadein-500 text-center lg:text-left w-full break-words">
       {{ include.headline }}
     </h1>
     {% if include.subheadline %}
