--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,6 +76,7 @@
             "fadein-800": 'fadeIn 0.5s ease forwards 0.8s',
             "fadein-900": 'fadeIn 0.5s ease forwards 0.9s',
             "fadein-1000": 'fadeIn 0.5s ease forwards 1s',
+            "fadein-1100": 'fadeIn 0.5s ease forwards 1.1s',
 
             "fadedown-800": 'fadeDown 0.5s ease forwards 0.8s',
           },
