--- a/_includes/elements/imagetags.html
+++ b/_includes/elements/imagetags.html
@@ -8,7 +8,7 @@
     {% case layout_type %}
       {% when "quote-2tags" %}
         {% if forloop.index == 1 %}
-          {% assign tag_class = "-right-4 md:-right-12 bottom-4 md:bottom-2/3" %}
+          {% assign tag_class = "-right-4 md:-right-12 bottom-1/4 md:bottom-2/3" %}
         {% elsif forloop.index == 2 %}
           {% assign tag_class = "-left-4 md:-left-12 top-[45%]" %}
         {% endif %}
