--- a/_includes/sections/slider.html
+++ b/_includes/sections/slider.html
@@ -20,7 +20,7 @@ site.data.textblocks.sections[section] %}
     }
 </style>
 
-<div class="flex flex-col-reverse md:flex-col pb-10 md:pb-24 pt-10 md:pt-24">
+<div class="flex flex-col pb-10 md:pb-24 pt-10 md:pt-24">
     <div class="overflow-hidden w-full relative mt-10 md:mt-0">
         <div class="marquee-track flex w-max gap-4">
             {% for slide in site.data.textblocks.sections.slider.slides %}
@@ -39,7 +39,7 @@ site.data.textblocks.sections[section] %}
     </div>
     <div class="px-8 md:px-4">
         <div class="max-w-7xl mx-auto">
-            <div class="text-center md:mt-24">
+            <div class="text-center mt-12 md:mt-24">
                 <h2 class="text-4xl font-medium md:font-bold font-display mb-4 is-animated">{{ section_data.headline }}</h2>
             </div>
         </div>
