--- a/_includes/sections/steps-quote.html
+++ b/_includes/sections/steps-quote.html
@@ -28,7 +28,7 @@ site.data.textblocks.sections[section] %}
             {% endfor %}
         </div>
         <div class="text-center">
-        {% include elements/button.html text=section_data.button_text link=section_data.button_link %}
+        {% include elements/button.html icon=section_data.button_icon text=section_data.button_text link=section_data.button_link %}
         </div>
     </div>
 </div>
