--- a/_includes/elements/section-headline.html
+++ b/_includes/elements/section-headline.html
@@ -1,1 +1,1 @@
-<h2 class="text-4xl font-medium font-display mb-4 {% if include.animation != false and include.animation != 'false' %}is-animated{% endif %} w-full {% if include.centered %}text-center md:text-left{% endif %}">{{ include.text }}</h2>
+<h2 class="text-4xl font-medium font-display mb-4 {% if include.animation != false and include.animation != 'false' %}is-animated{% endif %} w-full {% if include.centered %}text-center md:text-left{% endif %} {% if include.maxwidth %}max-w-md{% endif %}">{{ include.text }}</h2>
