--- a/_includes/elements/section-subheadline.html
+++ b/_includes/elements/section-subheadline.html
@@ -1,3 +1,3 @@
-<div class="text-2xl font-display mb-4 {% if include.animation != false and include.animation != 'false' %}is-animated{% endif %} w-full {% if include.centered %}text-center md:text-left{% endif %}">
+<div class="text-2xl font-display mb-4 {% if include.animation != false and include.animation != 'false' %}is-animated{% endif %} w-full {% if include.centered %}text-center md:text-left{% endif %} {% if include.maxwidth %}max-w-md{% endif %}">
     {{ include.text }}
 </div>
