--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,6 +105,7 @@
     ul {
       list-style: disc !important;
       list-style-position: inside !important;
+      line-height: 2 !important;
     }
 
     @keyframes fadeIn {
@@ -166,6 +167,7 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
+
       const observer = new IntersectionObserver((entries, observer) => {
         entries.forEach((entry) => {
           if (entry.isIntersecting) {
